# TRANSVD

./: .gitignore  CLAUDE.md  README.md  USAGE.md  eslint.config.js  index.html  package-lock.json  package.json  switch-mirror.sh  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
icons/android/drawable-v24/: ic_launcher_foreground.xml
icons/android/values/: ic_launcher_background.xml
scripts/: generate-icons.mjs  patch-android-signing.sh
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json  transvd.keystore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/drawable-v24/: ic_launcher_foreground.xml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file_ops.rs  mod.rs  system.rs
src/components/common/: DownloadButton.tsx  DropZone.tsx  FFmpegLoader.tsx  LanguageSwitcher.tsx  ProcessingOverlay.tsx  ProgressBar.tsx  SettingsDrawer.tsx  ThemeSwitcher.tsx
src/components/layout/: BottomNav.tsx  Header.tsx  OperationPanel.tsx  Sidebar.tsx
src/components/operations/: AdjustPanel.tsx  AudioExtractPanel.tsx  CompressPanel.tsx  ConcatPanel.tsx  ConvertPanel.tsx  CropPanel.tsx  FadePanel.tsx  GifPanel.tsx  LoopPanel.tsx  MediaInfoPanel.tsx  MixAudioPanel.tsx  MutePanel.tsx  OverlayPanel.tsx  PipPanel.tsx  RawFFmpegPanel.tsx  (+10 more)
src/context/: LanguageContext.tsx  ThemeContext.tsx
src/hooks/: useFFmpeg.ts  useIsMobile.ts
src/i18n/: en.ts  zh.ts
src/lib/: ffmpeg.ts  icons.tsx  native-ffmpeg.ts  save.ts
src/styles/: index.css
src/workers/: ffmpeg.worker.ts
