[package]
name = "transvd"
version = "1.4.3"
description = "TRANSVD - Desktop video editor powered by ffmpeg.wasm"
authors = ["TRANVD"]
edition = "2021"

[lib]
name = "tranvd_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
